<resources>
    <string name="app_name">Shopping Pal</string>

    <!--  Login  -->
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <!--  Register  -->
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_valid_email">Please enter a valid email</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <!--  Main  -->
    <string name="btn_lbl_logout">Logout</string>

    <!--  Progress Indicator  -->
    <string name="please_wait">Please Wait&#8230;</string>

    <!--  Forgot Password  -->
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="btn_send_email">Send Mail</string>
    <string name="forgot_password_message">Please enter your email address. We will send you a link to reset your password.</string>

    <!--  Profile  -->
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failure">Error selecting image</string>
    <string name="enter_phone_number">Please enter a phone number</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="no_profile_image">Please upload a profile image</string>
    <string name="complete_profile_success">Profile updated!</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>

    <!--  Settings Screen  -->
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="get_user_details_error">Error while fetching profile</string>

    <!--  Products  -->
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="action_add_product">Add Product</string>

    <!--  Add Product  -->
    <string name="hint_product_title">Please enter product title</string>
    <string name="hint_product_description">Please enter product description</string>
    <string name="hint_product_price">Please enter product price</string>
    <string name="hint_product_quantity">Please enter product quantity</string>
    <string name="btn_add_product">CONFIRM</string>
    <string name="err_product_title">Please provide a title</string>
    <string name="err_product_description">Please provide a description</string>
    <string name="err_product_price">Please provide a price</string>
    <string name="err_product_quantity">Please provide a quantity</string>
    <string name="err_product_image">Please provide an image</string>
    <string name="add_product_success">Product added successfully!</string>

    <!--  Products List  -->
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="delete_product_success">Product deleted!</string>
    <string name="delete_product_failure">Error while deleting product!</string>
    <string name="delete_product_dialog_title">Delete Product</string>
    <string name="delete_product_dialog">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--  Product Details  -->
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">Add to Cart</string>

</resources>