<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.aknindustries.shoppingpal.utils.CustomBoldTextView
            android:id="@+id/forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/forgot_password_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size" />

    </androidx.appcompat.widget.Toolbar>

    <com.aknindustries.shoppingpal.utils.CustomTextView
        android:id="@+id/forgot_password_message"
        app:layout_constraintTop_toBottomOf="@id/toolbar_forgot_password_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        android:padding="@dimen/btn_padding"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_message">

        <com.aknindustries.shoppingpal.utils.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.aknindustries.shoppingpal.utils.CustomButton
        android:id="@+id/btn_send_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_send_email"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>